src/assets/style/pages/_home-page.scss
.home-page {
  @include fullPageDimensions;
  background-color: $light-page-bg-clr;
  background: $light-page-gradient;
  transition: all $theme-transition;

  @include darkMode {
    .hero-section {
      .main-content {
        .heading-container {
          .main-heading {
            .logo {
              span {
                color: $dark-theme-clr;
              }
            }
          }
        }

        .btn-cta {
          animation-name: pulse-animation-dark;

          &::before {
            background-color: darken($dark-theme-clr, 15%);
          }

          &::after {
            background-color: $dark-theme-clr;
          }

          &:hover {
            &::before {
              width: 100%;
            }
          }
        }
      }
    }
  }

  .hero-section {
    flex-grow: 1;

    .main-content {
      flex-grow: 1;
      gap: 30px;

      .heading-container {
        width: 85vw;
        gap: 20px;
        text-align: center;

        @include for-narrow-layout {
          width: 100vw;
          padding-inline: 20px;
        }

        .main-heading {
          font-size: em(46px);
          font-family: $heading-font-family;
          line-height: 1em;
          letter-spacing: -0.2px;

          @include for-narrow-layout {
            font-size: em(36px);
          }

          @include for-small-layout {
            font-size: em(28px);
          }

          .logo {
            @include logo(1em);
          }
        }

        .secondary-heading {
          font-size: em(24px);
          line-height: 1.5em;

          @include for-narrow-layout {
            font-size: em(18px);
          }

          @include for-small-layout {
            font-size: em(14px);
          }
        }
      }

      .btn-cta {
        display: inline-block;
        position: relative;

        padding: 15px 30px;
        border-radius: 2em;

        font-size: em(16px);
        color: $secondary-font-clr;

        overflow: hidden;
        z-index: 1;
        animation: pulse-animation-light 2s ease-in-out 2s infinite;

        &::after,
        &::before {
          content: '';
          position: absolute;
          inset: auto auto 0 0;
          height: 100%;
        }

        &::before {
          width: 0%;
          border-radius: 2em;
          background-color: darken($main-theme-clr, 15%);
          transition: all 0.4s;
          z-index: -1;
        }

        &::after {
          width: 100%;
          background-color: $main-theme-clr;
          z-index: -2;
        }

        &:hover {
          &::before {
            width: 100%;
          }
        }
      }
    }

    .hero-img {
      transform: translateY(18px);
    }
  }
}

